<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/crime" />
    </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list"
            android:textSize="17dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/black"/>

        <TableLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

        <!--   Crime1     -->

        <TableRow android:padding="8dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/zodiac"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/zodiacbio"
                />
        </TableRow>

      <!--   Crime2     -->
        <TableRow android:padding="8dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/napoleon"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/napoleonbio"
                />
        </TableRow>

        <!--   Crime3     -->
        <TableRow android:padding="8dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/jack"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/jackbio"
                />
        </TableRow>

        <!--   Crime4     -->
        <TableRow android:padding="8dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/alcapone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/alcaponebio"
                />
        </TableRow>

        <!--   Crime5     -->
        <TableRow android:padding="8dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/barefoot"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/barefootbio"
                />
        </TableRow>

        <!--   Crime6     -->
        <TableRow android:padding="8dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/billy"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/billybio"
                />
             </TableRow>
        </TableLayout>

    </LinearLayout>

</ScrollView>